--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -4,14 +4,16 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class="home">
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>app/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content class="home">
+  <ion-card>
+    <ion-card-content>
+
+      <button (click)="takePicture()">Foto</button>
+
+      Ultima:
+      <img [src]="base64Image" *ngIf="base64Image" />
+
+      <div>{{ base64Image }}</div>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
