--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,8 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
+
+  <script src="../../watsonConnection.js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
   <!-- Zone.js and Reflect-metadata  -->
